--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.18"
   },
   "devDependencies": {
+    "daisyui": "^4.12.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
